--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwwGvHMKUIXPmYlQgR/DS6",
+      "authorship_tag": "ABX9TyNFOsyMvycND+HL9arsdjmx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -569,7 +569,11 @@
         "#start code for React Agent using LT memory ....\n",
         "#ST Memory - In session can be handled via State but LT memory we need mem0 or something\n",
         "#we will build the code using mem0 also\n",
-        "!pip install langchain langchain_core langgraph langmem mcp\n"
+        "!pip install langchain\n",
+        "!pip install langgraph\n",
+        "!pip install -U langmem\n",
+        "!pip install mcp\n",
+        "!pip install -qU \"langchain[groq]\"\n"
       ],
       "metadata": {
         "id": "lFITbowO2wdd"
@@ -579,18 +583,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from langgraph.prebuilt import create_react_agent\n",
+        "from langchain.chat_models import init_chat_model\n",
+        "from langgraph.store.memory import InMemoryStore\n",
+        "from langgraph.checkpoint.memory import MemorySaver\n",
+        "from langmem import create_manage_memory_tool , create_search_memory_tool\n"
+      ],
       "metadata": {
         "id": "4v0UWhUL5aql"
       },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tools =[\n",
+        "    create_manage_memory_tool(namespace = (\"agent_memory\",)),\n",
+        "    create_search_memory_tool(namespace = (\"agent_memory\",))\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "OIuiKyzp5Twx"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os , getpass\n",
+        "import dotenv\n",
+        "#setup a memory store\n",
+        "from google.colab import userdata\n",
+        "OPENAI_API_KEY = userdata.get('OPENAI_API_KEY')\n",
+        "GROQ_API_KEY = userdata.get('GROQ_API_KEY')\n",
+        "store = InMemoryStore(\n",
+        "    index ={\n",
+        "        \"dims\":1536,\n",
+        "        \"embed\":\"openai:text-embedding-3-small\"\n",
+        "    }\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "OjKlyCbj_tGS"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b8695846"
+      },
+      "source": [
+        "model = init_chat_model(\"llama3-8b-8192\", api_key= GROQ_API_KEY ,model_provider=\"groq\")\n",
+        "#add memory checkpointer\n",
+        "checkpointer = MemorySaver()\n",
+        "#activate react agent\n",
+        "agent = create_react_agent(model=model,tools=tools,checkpointer=checkpointer,store=store)"
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#start executing the agent\n"
+      ],
       "metadata": {
-        "id": "OIuiKyzp5Twx"
+        "id": "FcFWdI6MGmB9"
       },
       "execution_count": null,
       "outputs": []
