--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFOsyMvycND+HL9arsdjmx",
+      "authorship_tag": "ABX9TyPPHbLJjjLLYYw+6kuCIo2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,7 @@
         "#extending the agent to react and using memory in this -> using langmem sdk from langrapgh -> 1102\n",
         "#https://www.youtube.com/watch?v=aHCDrAbH_go&t=120s - LangGraph\n",
         "#https://www.analyticsvidhya.com/blog/2025/03/langmem-sdk/ - Analytics Vidhya\n",
+        "#https://docs.langchain.com/oss/python/langgraph/add-memory#add-short-term-memory\n",
         "!pip install langchain_core langchain-anthropic langgraph"
       ]
     },
@@ -564,6 +565,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "CODE OF USING PERSISTENCE MEMORY EITH REACT AGENT USING TOOLS AND ALSO STORING RETREIVING MEMORY\n",
+        "* https://docs.langchain.com/oss/python/langgraph/add-memory#add-short-term-memory\n",
+        "\n",
+        "\n",
+        "*   Checkpoints need to be used backed by Persistence Store like a Redis or Postgress of Mongodb\n",
+        "*  All memory has to be stored in the persistence memory using a session_id\n",
+        "*  These memory can be searched . Memory can be of a Conversational Memory and stored in this system at the end of the conversation   \n",
+        "*   Langgraph uses State object for passing memory for in-session\n",
+        "*   Langgraph uses Checkpoints for persistence memory and these can be passed to graph nodes or sub-agents\n",
+        "*   Tools can be binded to model. USE CREATE_REACT_AGENT\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1RtIW0B_XbOL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#start code for React Agent using LT memory ....\n",
@@ -593,7 +620,7 @@
       "metadata": {
         "id": "4v0UWhUL5aql"
       },
-      "execution_count": 16,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -607,7 +634,7 @@
       "metadata": {
         "id": "OIuiKyzp5Twx"
       },
-      "execution_count": 17,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -619,41 +646,108 @@
         "from google.colab import userdata\n",
         "OPENAI_API_KEY = userdata.get('OPENAI_API_KEY')\n",
         "GROQ_API_KEY = userdata.get('GROQ_API_KEY')\n",
+        "#in session memory what langchain offers\n",
+        "#if we want permanent memory across session we need to use a persistent memory store like Redis / Mongo-db etc ... refer code as below for that\n",
+        "\n",
         "store = InMemoryStore(\n",
         "    index ={\n",
         "        \"dims\":1536,\n",
         "        \"embed\":\"openai:text-embedding-3-small\"\n",
         "    }\n",
-        ")"
+        ")\n"
       ],
       "metadata": {
         "id": "OjKlyCbj_tGS"
       },
-      "execution_count": 23,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "b8695846"
-      },
-      "source": [
-        "model = init_chat_model(\"llama3-8b-8192\", api_key= GROQ_API_KEY ,model_provider=\"groq\")\n",
-        "#add memory checkpointer\n",
-        "checkpointer = MemorySaver()\n",
-        "#activate react agent\n",
-        "agent = create_react_agent(model=model,tools=tools,checkpointer=checkpointer,store=store)"
-      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#start executing the agent\n"
+        "from langchain_core.tools import tool\n",
+        "from typing import List , Literal\n",
+        "@tool\n",
+        "def add(a:int,b:int) ->int:\n",
+        "  \"\"\"Adds two integers and returns the result.\"\"\"\n",
+        "  return a+b\n",
+        "functions =[add]"
+      ],
+      "metadata": {
+        "id": "O0XkZxg2LA1R"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b8695846",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5066f8a-08aa-4294-fafa-7f7dfb8763d0"
+      },
+      "source": [
+        "model = init_chat_model(\"qwen/qwen3-32b\", api_key= GROQ_API_KEY ,model_provider=\"groq\")\n",
+        "#add memory checkpointer\n",
+        "checkpointer = MemorySaver()\n",
+        "#activate react agent\n",
+        "agent = create_react_agent(model=model,tools = functions,checkpointer=checkpointer,store=store)"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2595478965.py:5: LangGraphDeprecatedSinceV10: create_react_agent has been moved to `langchain.agents`. Please update your import to `from langchain.agents import create_agent`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n",
+            "  agent = create_react_agent(model=model,tools = functions,checkpointer=checkpointer,store=store)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#start executing the agent\n",
+        "text = \"Hi, Please create marketing plan for reducing customer acquistion cost. This plan is for CMO Exec Level so plan should be executable\"\n",
+        "session_id = 1\n",
+        "result = agent.invoke({\"messages\":[{\"role\":\"user\",\"content\":text}]},config ={\"configurable\":{\"session_id\":session_id, \"thread_id\": str(session_id)}} )\n",
+        "print(result[\"messages\"][-1].content)"
       ],
       "metadata": {
         "id": "FcFWdI6MGmB9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#adding more text into the prompt\n",
+        "text =\"also pls suggest campaigns\"\n",
+        "session_id = 1\n",
+        "result = agent.invoke({\"messages\":[{\"role\":\"user\",\"content\":text}]},config ={\"configurable\":{\"session_id\":session_id, \"thread_id\": str(session_id)}} )\n",
+        "print(result[\"messages\"][-1].content)"
+      ],
+      "metadata": {
+        "id": "g0faBYmbNhld"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#now change the session_id and check memory\n",
+        "text = \"generate marketing plan for increasing sales\"\n",
+        "session_id = 2\n",
+        "result = agent.invoke({\"messages\":[{\"role\":\"user\",\"content\":text}]},config ={\"configurable\":{\"session_id\":session_id, \"thread_id\": str(session_id)}} )\n",
+        "print(result[\"messages\"][-1].content)"
+      ],
+      "metadata": {
+        "id": "xxpuKKd0OTjc"
       },
       "execution_count": null,
       "outputs": []
