--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPHbLJjjLLYYw+6kuCIo2r",
+      "authorship_tag": "ABX9TyM9SZyu+roelPSRrvw3eEsW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -578,6 +578,9 @@
         "*   Langgraph uses State object for passing memory for in-session\n",
         "*   Langgraph uses Checkpoints for persistence memory and these can be passed to graph nodes or sub-agents\n",
         "*   Tools can be binded to model. USE CREATE_REACT_AGENT\n",
+        "*   Memory Management can be Async\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -620,21 +623,23 @@
       "metadata": {
         "id": "4v0UWhUL5aql"
       },
-      "execution_count": 86,
+      "execution_count": 89,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "tools =[\n",
+        "#Long term memory management tools to store memory and search memory\n",
+        "#when you use MongoDB or Redis you replace this with DB schemas - which are nothing but JSON objects - Key Value Pairs\n",
+        "memory_tool =[\n",
         "    create_manage_memory_tool(namespace = (\"agent_memory\",)),\n",
-        "    create_search_memory_tool(namespace = (\"agent_memory\",))\n",
+        "    create_search_memory_tool(namespace = (\"agent_memory_search\",))\n",
         "]"
       ],
       "metadata": {
         "id": "OIuiKyzp5Twx"
       },
-      "execution_count": 87,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -659,7 +664,7 @@
       "metadata": {
         "id": "OjKlyCbj_tGS"
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -670,42 +675,30 @@
         "@tool\n",
         "def add(a:int,b:int) ->int:\n",
         "  \"\"\"Adds two integers and returns the result.\"\"\"\n",
-        "  return a+b\n",
-        "functions =[add]"
+        "  return a+b"
       ],
       "metadata": {
         "id": "O0XkZxg2LA1R"
       },
-      "execution_count": 77,
+      "execution_count": 110,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b8695846",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a5066f8a-08aa-4294-fafa-7f7dfb8763d0"
+        "id": "b8695846"
       },
       "source": [
         "model = init_chat_model(\"qwen/qwen3-32b\", api_key= GROQ_API_KEY ,model_provider=\"groq\")\n",
         "#add memory checkpointer\n",
         "checkpointer = MemorySaver()\n",
         "#activate react agent\n",
-        "agent = create_react_agent(model=model,tools = functions,checkpointer=checkpointer,store=store)"
+        "#add the model and memory management tool into the agent - create and search memory\n",
+        "#*args and **kwargs are used to allow functions to accept an arbitrary number of arguments\n",
+        "agent = create_react_agent(model=model,tools = [add,*memory_tool],checkpointer=checkpointer,store=store)"
       ],
-      "execution_count": 79,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-2595478965.py:5: LangGraphDeprecatedSinceV10: create_react_agent has been moved to `langchain.agents`. Please update your import to `from langchain.agents import create_agent`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n",
-            "  agent = create_react_agent(model=model,tools = functions,checkpointer=checkpointer,store=store)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -717,10 +710,81 @@
         "print(result[\"messages\"][-1].content)"
       ],
       "metadata": {
-        "id": "FcFWdI6MGmB9"
+        "id": "FcFWdI6MGmB9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dbc6055e-e48d-4dea-c6d5-51089e78cc03"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Here's an executable marketing plan to reduce Customer Acquisition Cost (CAC) for CMO executives:\n",
+            "\n",
+            "---\n",
+            "\n",
+            "**STRATEGIC PLAN: REDUCING CUSTOMER ACQUISITION COST**\n",
+            "\n",
+            "**I. CURRENT STATE ANALYSIS**\n",
+            "1. Audit all existing acquisition channels (PPC, SEO, social, referrals, etc.)\n",
+            "2. Calculate current CAC by channel/segment using:  \n",
+            "   `CAC = Total Acquisition Costs / New Customers Acquired`\n",
+            "3. Identify top 20% of customers by LTV to analyze acquisition patterns\n",
+            "\n",
+            "**II. EXECUTIVE STRATEGIES**\n",
+            "1. **CHANNEL OPTIMIZATION**  \n",
+            "   - Discontinue underperforming channels with CAC > 150% of segment LTV  \n",
+            "   - Negotiate volume discounts with top-performing paid channels  \n",
+            "   - Implement dynamic bid adjustments for PPC (reduce bids on low-converting keywords)\n",
+            "\n",
+            "2. **OWNED TRAFFIC ENHANCEMENT**  \n",
+            "   - Launch content upgrade program (webinars, case studies) to boost blog conversion by 40%  \n",
+            "   - Implement strategic internal linking architecture to improve SEO visibility  \n",
+            "   - Create lead magnet matrix targeting 5 key buyer personas\n",
+            "\n",
+            "3. **PARTNER ECOSYSTEM DEVELOPMENT**  \n",
+            "   - Establish co-marketing agreements with 3 complementary SaaS vendors  \n",
+            "   - Create affiliate program with tiered commission structure (15-30%)  \n",
+            "   - Develop joint webinars with industry influencers\n",
+            "\n",
+            "4. **RETARGETING INITIATIVES**  \n",
+            "   - Launch 3-stage retargeting campaign (cart abandoners, website visitors, past purchasers)  \n",
+            "   - Implement dynamic product ads for high-intent audiences  \n",
+            "   - Set frequency caps to optimize ad spend efficiency\n",
+            "\n",
+            "**III. TECHNOLOGY IMPLEMENTATION**\n",
+            "1. Deploy marketing automation platform (e.g., HubSpot/Marketo)  \n",
+            "2. Implement AI-powered lead scoring across all channels  \n",
+            "3. Set up conversion rate optimization (CRO) program with monthly A/B tests\n",
+            "\n",
+            "**IV. ORGANIZATIONAL ALIGNMENT**\n",
+            "1. Create cross-functional CAC task force (Marketing + Sales + Finance)  \n",
+            "2. Implement quarterly channel performance reviews with automated dashboards  \n",
+            "3. Establish CAC reduction KPIs:  \n",
+            "   - 20% reduction in paid CAC within 6 months  \n",
+            "   - 15% increase in organic acquisition within 9 months  \n",
+            "   - 30% improvement in referral conversion rates\n",
+            "\n",
+            "**V. BUDGET ALLOCATION**\n",
+            "- Reallocate 25% of underperforming channel budget to high-performing channels  \n",
+            "- Invest 15% of marketing budget in CRO initiatives  \n",
+            "- Allocate 10% for partner program incentives\n",
+            "\n",
+            "---\n",
+            "\n",
+            "**IMPLEMENTATION TIMELINE**\n",
+            "Q1: Complete audit, launch automation platform, initiate channel optimization  \n",
+            "Q2: Launch retargeting campaigns, establish partner programs  \n",
+            "Q3: Implement AI lead scoring, begin CRO testing program  \n",
+            "Q4: Execute annual LTV/CAC analysis and strategy refinement\n",
+            "\n",
+            "This plan requires monthly executive reviews with clear ROI tracking against baseline metrics. Would you like me to elaborate on any specific component or provide implementation checklists?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
