--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9SZyu+roelPSRrvw3eEsW",
+      "authorship_tag": "ABX9TyPMUov7pMb/I8O6dE+Dn0Ag",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -623,7 +623,7 @@
       "metadata": {
         "id": "4v0UWhUL5aql"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +639,7 @@
       "metadata": {
         "id": "OIuiKyzp5Twx"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "OjKlyCbj_tGS"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +680,7 @@
       "metadata": {
         "id": "O0XkZxg2LA1R"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +691,13 @@
       "source": [
         "model = init_chat_model(\"qwen/qwen3-32b\", api_key= GROQ_API_KEY ,model_provider=\"groq\")\n",
         "#add memory checkpointer\n",
-        "checkpointer = MemorySaver()\n",
+        "checkpointer = MemorySaver() #this checkpointer gets changed to Mongo or Redis when we want persistent store and this can be Async\n",
+        "#in case of marketing agent we did these  things\n",
+        "#1 -Used Redis as persistent store and in that mem0 for checkpointer\n",
+        "#2 -Used compressing the context ....\n",
+        "#3 -Used langmem to do so\n",
+        "#4 -tool call binding as well\n",
+        "#5 -search the memory\n",
         "#activate react agent\n",
         "#add the model and memory management tool into the agent - create and search memory\n",
         "#*args and **kwargs are used to allow functions to accept an arbitrary number of arguments\n",
@@ -710,81 +716,10 @@
         "print(result[\"messages\"][-1].content)"
       ],
       "metadata": {
-        "id": "FcFWdI6MGmB9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "dbc6055e-e48d-4dea-c6d5-51089e78cc03"
+        "id": "FcFWdI6MGmB9"
       },
-      "execution_count": 115,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Here's an executable marketing plan to reduce Customer Acquisition Cost (CAC) for CMO executives:\n",
-            "\n",
-            "---\n",
-            "\n",
-            "**STRATEGIC PLAN: REDUCING CUSTOMER ACQUISITION COST**\n",
-            "\n",
-            "**I. CURRENT STATE ANALYSIS**\n",
-            "1. Audit all existing acquisition channels (PPC, SEO, social, referrals, etc.)\n",
-            "2. Calculate current CAC by channel/segment using:  \n",
-            "   `CAC = Total Acquisition Costs / New Customers Acquired`\n",
-            "3. Identify top 20% of customers by LTV to analyze acquisition patterns\n",
-            "\n",
-            "**II. EXECUTIVE STRATEGIES**\n",
-            "1. **CHANNEL OPTIMIZATION**  \n",
-            "   - Discontinue underperforming channels with CAC > 150% of segment LTV  \n",
-            "   - Negotiate volume discounts with top-performing paid channels  \n",
-            "   - Implement dynamic bid adjustments for PPC (reduce bids on low-converting keywords)\n",
-            "\n",
-            "2. **OWNED TRAFFIC ENHANCEMENT**  \n",
-            "   - Launch content upgrade program (webinars, case studies) to boost blog conversion by 40%  \n",
-            "   - Implement strategic internal linking architecture to improve SEO visibility  \n",
-            "   - Create lead magnet matrix targeting 5 key buyer personas\n",
-            "\n",
-            "3. **PARTNER ECOSYSTEM DEVELOPMENT**  \n",
-            "   - Establish co-marketing agreements with 3 complementary SaaS vendors  \n",
-            "   - Create affiliate program with tiered commission structure (15-30%)  \n",
-            "   - Develop joint webinars with industry influencers\n",
-            "\n",
-            "4. **RETARGETING INITIATIVES**  \n",
-            "   - Launch 3-stage retargeting campaign (cart abandoners, website visitors, past purchasers)  \n",
-            "   - Implement dynamic product ads for high-intent audiences  \n",
-            "   - Set frequency caps to optimize ad spend efficiency\n",
-            "\n",
-            "**III. TECHNOLOGY IMPLEMENTATION**\n",
-            "1. Deploy marketing automation platform (e.g., HubSpot/Marketo)  \n",
-            "2. Implement AI-powered lead scoring across all channels  \n",
-            "3. Set up conversion rate optimization (CRO) program with monthly A/B tests\n",
-            "\n",
-            "**IV. ORGANIZATIONAL ALIGNMENT**\n",
-            "1. Create cross-functional CAC task force (Marketing + Sales + Finance)  \n",
-            "2. Implement quarterly channel performance reviews with automated dashboards  \n",
-            "3. Establish CAC reduction KPIs:  \n",
-            "   - 20% reduction in paid CAC within 6 months  \n",
-            "   - 15% increase in organic acquisition within 9 months  \n",
-            "   - 30% improvement in referral conversion rates\n",
-            "\n",
-            "**V. BUDGET ALLOCATION**\n",
-            "- Reallocate 25% of underperforming channel budget to high-performing channels  \n",
-            "- Invest 15% of marketing budget in CRO initiatives  \n",
-            "- Allocate 10% for partner program incentives\n",
-            "\n",
-            "---\n",
-            "\n",
-            "**IMPLEMENTATION TIMELINE**\n",
-            "Q1: Complete audit, launch automation platform, initiate channel optimization  \n",
-            "Q2: Launch retargeting campaigns, establish partner programs  \n",
-            "Q3: Implement AI lead scoring, begin CRO testing program  \n",
-            "Q4: Execute annual LTV/CAC analysis and strategy refinement\n",
-            "\n",
-            "This plan requires monthly executive reviews with clear ROI tracking against baseline metrics. Would you like me to elaborate on any specific component or provide implementation checklists?\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
