--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMUov7pMb/I8O6dE+Dn0Ag",
+      "authorship_tag": "ABX9TyNT7iFawIhLAkHqBcMdAEWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -749,6 +749,36 @@
         "id": "xxpuKKd0OTjc"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#leveraging langmem\n",
+        "namespace = {\"agent_memory\",\"{user_id}\"} # creataing a agent memory segregrated by user_id - This is what I did\n",
+        "text = \"pls publish my marketing plan\"\n",
+        "session_id = 2\n",
+        "user_id = \"ab\"\n",
+        "result = agent.invoke({\"messages\":[{\"role\":\"user\",\"content\":text}]},config ={\"configurable\":{\"session_id\":session_id, \"thread_id\": user_id}} )"
+      ],
+      "metadata": {
+        "id": "9TOXxRe8hiSN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "items = store.search(\"agenr_memory\",)\n",
+        "for item in items:\n",
+        "  print(item.namespace,item.value)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "6SiHBlE9ocTH"
+      },
+      "execution_count": 139,
       "outputs": []
     }
   ]
