--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOH+aok94Bqe4YXOdcvHnyk",
+      "authorship_tag": "ABX9TyMIK3powJiffMr/4O/Zg9f4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1007,6 +1007,22 @@
       ],
       "metadata": {
         "id": "yfM7lQMFTy2S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code for MCP\n",
+        "#why MCP - standardize away to access tools and give it to LLM\n",
+        "#agents can be exposed MCP - this can enable Agent Factories - Agent as a tool Pattern\n",
+        "#A2A communication can be thru Schema....\n",
+        "#Master Agent forces a schema on sub agents and sub agents respond back on that schema\n",
+        "#Agents can use VFS - Virtual File System , Todo-list , System prompt and sub agent"
+      ],
+      "metadata": {
+        "id": "tNfu95dW51Hv"
       },
       "execution_count": null,
       "outputs": []
