--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIK3powJiffMr/4O/Zg9f4",
+      "authorship_tag": "ABX9TyNC2JYtG+Hcicqmv1U+zXfq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1017,6 +1017,10 @@
         "#code for MCP\n",
         "#why MCP - standardize away to access tools and give it to LLM\n",
         "#agents can be exposed MCP - this can enable Agent Factories - Agent as a tool Pattern\n",
+        "#subagents can run in there own sandbox(E2B) and can complete there own task independently\n",
+        "#I used subagents for Code and Text2sql  run in there own sandbox - this helps for security\n",
+        "#Subagents chaining and comm is done thru message passing by the main agent / Orchestrator pattern ....\n",
+        "#Subagents are registered in a registry https://www.vladsnewsletter.com/p/sub-agents\n",
         "#A2A communication can be thru Schema....\n",
         "#Master Agent forces a schema on sub agents and sub agents respond back on that schema\n",
         "#Agents can use VFS - Virtual File System , Todo-list , System prompt and sub agent"
