--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC2JYtG+Hcicqmv1U+zXfq",
+      "authorship_tag": "ABX9TyNVVp5MJLCIpOUkpW1Usn7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1023,10 +1023,32 @@
         "#Subagents are registered in a registry https://www.vladsnewsletter.com/p/sub-agents\n",
         "#A2A communication can be thru Schema....\n",
         "#Master Agent forces a schema on sub agents and sub agents respond back on that schema\n",
-        "#Agents can use VFS - Virtual File System , Todo-list , System prompt and sub agent"
+        "#Agents can use VFS - Virtual File System , Todo-list , System prompt and sub agent\n",
+        "\n",
+        "#https://thenewstack.io/15-best-practices-for-building-mcp-servers-in-production/\n",
+        "#https://thenewstack.io/how-elicitation-in-mcp-brings-human-in-the-loop-to-ai-tools/\n",
+        "\n",
+        "#Agents -> use MCP key factors:\n",
+        "\"\"\"\n",
+        "1.Use Aysnc\n",
+        "2.Use Error handling / time out from MCP server\n",
+        "3.OAuth Security\n",
+        "4.Elicitation of response from Human .... Human + MCP\n",
+        "5.use json-rpc or HTTPStreaming for faster response from MCP service\n",
+        "6.\n",
+        "\"\"\"\n"
       ],
       "metadata": {
         "id": "tNfu95dW51Hv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uT6jBGudAYyv"
       },
       "execution_count": null,
       "outputs": []
