--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVVp5MJLCIpOUkpW1Usn7O",
+      "authorship_tag": "ABX9TyNvGazrkpPxT0xiD11LXN8v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1025,6 +1025,14 @@
         "#Master Agent forces a schema on sub agents and sub agents respond back on that schema\n",
         "#Agents can use VFS - Virtual File System , Todo-list , System prompt and sub agent\n",
         "\n",
+        "#MCP\n",
+        "\"\"\"\n",
+        "1. MCP Prompt - what protocol , what are tool inputs , return - text , image etc....\n",
+        "2. MCP Client\n",
+        "3. MCP Server\n",
+        "4. Resources\n",
+        "\"\"\"\n",
+        "\n",
         "#https://thenewstack.io/15-best-practices-for-building-mcp-servers-in-production/\n",
         "#https://thenewstack.io/how-elicitation-in-mcp-brings-human-in-the-loop-to-ai-tools/\n",
         "\n",
@@ -1046,9 +1054,61 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#simple mcp server\n",
+        "!pip install fastmcp"
+      ],
       "metadata": {
         "id": "uT6jBGudAYyv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from fastmcp import FastMCPServer\n",
+        "from fastmcp import FastMCP\n",
+        "\n",
+        "server = FastMCP(\"Demo\")\n",
+        "@server.tool()\n",
+        "async def add(a:int,b:int) ->int:\n",
+        "  return a+b\n",
+        "@server.tool()\n",
+        "async def multiply(a:int,b:int) ->int:\n",
+        "  return a*b\n",
+        "\n",
+        "@server.tool()\n",
+        "async def divide(a:int,b:int) ->int:\n",
+        "  return a/b\n",
+        "\n",
+        "@server.tool()\n",
+        "async def subtract(a:int,b:int) ->int:\n",
+        "  return a-b\n",
+        "\n",
+        "@server.tool()\n",
+        "async def greet_user_formal(name:str) ->str:\n",
+        "\n",
+        "  \"\"\"\n",
+        "  A tool that returns a greeting message in a very long tone\n",
+        "  Args:\n",
+        "  name:str\n",
+        "  Returns:str\n",
+        "  \"\"\"\n",
+        "  return f\"Hello {name}! How can I assist you today?\"\n",
+        "\n",
+        "@server.prompt\n",
+        "def greet_user_prompt(name:str) ->str:\n",
+        "  \"\"\" Generates  a message asking for a greeting\"\"\"\n",
+        "  return f\"\"\"\n",
+        "  Return a greeting message for a user called '{name}'\n",
+        "  if the user is called 'Laurent' , use a formal style , else use a street style\n",
+        "  \"\"\"\n",
+        "if __name__ == \"_main()__\":\n",
+        "  server.run(transport=\"stdio\")"
+      ],
+      "metadata": {
+        "id": "hIiLMfRNHTmL"
       },
       "execution_count": null,
       "outputs": []
