--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvGazrkpPxT0xiD11LXN8v",
+      "authorship_tag": "ABX9TyO62BTYfQqptsogS/Ot2mYD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1067,7 +1067,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from fastmcp import FastMCPServer\n",
         "from fastmcp import FastMCP\n",
         "\n",
         "server = FastMCP(\"Demo\")\n",
@@ -1087,30 +1086,43 @@
         "  return a-b\n",
         "\n",
         "@server.tool()\n",
-        "async def greet_user_formal(name:str) ->str:\n",
+        "async def greet_user_formal_tool(name:str) ->str:\n",
         "\n",
         "  \"\"\"\n",
-        "  A tool that returns a greeting message in a very long tone\n",
+        "  A tool that returns a greeting message in a very formal  tone\n",
         "  Args:\n",
-        "  name:str\n",
-        "  Returns:str\n",
+        "  name(str): The name of person to greet\n",
+        "  Returns:\n",
+        "    str: A formal greeting message for the given name\n",
+        "  \"\"\"\n",
+        "  return f\"Hello {name}! How can I assist you today?\"\n",
+        "\n",
+        "@server.tool()\n",
+        "async def greet_user_street_style_tool(name:str) ->str:\n",
+        "\n",
+        "  \"\"\"\n",
+        "  A tool that returns a greeting message in street style\n",
+        "  Args:\n",
+        "  name(str):\n",
+        "  Returns:\n",
+        "    str:A street style greeting message for the given name\n",
         "  \"\"\"\n",
         "  return f\"Hello {name}! How can I assist you today?\"\n",
         "\n",
         "@server.prompt\n",
-        "def greet_user_prompt(name:str) ->str:\n",
+        "def greet_user_prompt(name:str) ->str: # this enables formal or street style depending upon the\n",
         "  \"\"\" Generates  a message asking for a greeting\"\"\"\n",
         "  return f\"\"\"\n",
         "  Return a greeting message for a user called '{name}'\n",
         "  if the user is called 'Laurent' , use a formal style , else use a street style\n",
         "  \"\"\"\n",
         "if __name__ == \"_main()__\":\n",
-        "  server.run(transport=\"stdio\")"
+        "  server.run()"
       ],
       "metadata": {
         "id": "hIiLMfRNHTmL"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
