--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO62BTYfQqptsogS/Ot2mYD",
+      "authorship_tag": "ABX9TyN5ayVN4aY/0Tnk5RmVWtQ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1067,6 +1067,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#YOUR OWN CUSTOM MCP SERVER\n",
+        "\n",
         "from fastmcp import FastMCP\n",
         "\n",
         "server = FastMCP(\"Demo\")\n",
@@ -1107,7 +1109,7 @@
         "  Returns:\n",
         "    str:A street style greeting message for the given name\n",
         "  \"\"\"\n",
-        "  return f\"Hello {name}! How can I assist you today?\"\n",
+        "  return f\"Yo {name}! Wassup ? You good?\"\n",
         "\n",
         "@server.prompt\n",
         "def greet_user_prompt(name:str) ->str: # this enables formal or street style depending upon the\n",
@@ -1120,9 +1122,73 @@
         "  server.run()"
       ],
       "metadata": {
-        "id": "hIiLMfRNHTmL"
+        "id": "hIiLMfRNHTmL",
+        "outputId": "1ffdbfd7-3937-4c46-cfde-03dbb6eeee02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+            "  return datetime.utcnow().replace(tzinfo=utc)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#langchain code to use MCP server as a client\n",
+        "!pip install langchain-mcp-adapters"
+      ],
+      "metadata": {
+        "id": "2OHY6rt7MCpN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#call MCP tools\n",
+        "from langchain_mcp_adapters.client import MultiServerMCPClient\n",
+        "from langchain.agents import create_agent\n",
+        "\n",
+        "client = MultiServerMCPClient(\n",
+        "    {\n",
+        "        \"math\":{\n",
+        "            \"transport\":\"stdio\", #local subprocess communication\n",
+        "            \"command\":\"python\",\n",
+        "            #absolute path to your math_server.py\n",
+        "            \"args\":[\"path/to/math_server.py\"]\n",
+        "        },\n",
+        "        \"greeting\":{\n",
+        "            \"transport\":\"stdio\",\n",
+        "            \"command\":\"python\",\n",
+        "            \"args\":[\"path/to/greeting_server.py\"]\n",
+        "        },\n",
+        "        \"weather\":{\n",
+        "            \"transport\":\"stdio\",\n",
+        "            \"command\":\"python\",\n",
+        "            \"args\":[\"path/to/weather_server.py\"]\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        ")\n",
+        "tools = await client.get_tools()\n",
+        "agent = create_agent(\"claude-sonnet-4-5-20250929\",tools=tools)\n",
+        "math_response = await agent.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"what's(3+5)X12\"}]})\n",
+        "weather_response = await agent.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"what is the weather in NYC\"}]})"
+      ],
+      "metadata": {
+        "id": "SQ7eE-G3MW2v"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
