--- a/Coding_Agent.ipynb
+++ b/Coding_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7MdrcTNKxNYD3DEYIeVQD",
+      "authorship_tag": "ABX9TyPUT+EB5bLGUU2+x7Hh2Qu2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,11 +412,14 @@
         "  if args.use_unsloth:\n",
         "    from unsloth import FastLanguageModel\n",
         "  if args.use_4bit_quantization:\n",
+        "    #this setup is QLoRA setup for reasons as below\n",
+        "    #load model base weights in 4 bit , compute dtype = matmul etc are in fp16\n",
+        "    #\n",
         "    bnb_config = BitsAndBytesConfig(\n",
-        "        load_in_4bit = args.use_4bit_quantization,\n",
-        "        bnb_4bit_quant_type = args.bnb_4bit_quant_type,\n",
-        "        bnb_4bit_compute_dtype = compute_dtype,\n",
-        "        bnb_4bit_use_double_quant = args.use_nested_quant\n",
+        "        load_in_4bit = args.use_4bit_quantization, # load base model weights to load in 4 bits - nf4 or fp4\n",
+        "        bnb_4bit_quant_type = args.bnb_4bit_quant_type, # instructs the model weights to use in NF4 or INT4\n",
+        "        bnb_4bit_compute_dtype = compute_dtype, # all computation - matmul and attention weights etc the precision will be FP16 for accuracy ....\n",
+        "        bnb_4bit_use_double_quant = args.use_nested_quant #use double quantization but looses accuracy but very good for very large size LLM\n",
         "    )\n",
         "    if compute_dtype == torch.float16 and args.use_4bit_quantization:\n",
         "      device_map = (\n",
