--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5ayVN4aY/0Tnk5RmVWtQ7",
+      "authorship_tag": "ABX9TyMg7JqMsahivI3ZK0o9sjvH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1187,6 +1187,79 @@
       ],
       "metadata": {
         "id": "SQ7eE-G3MW2v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#DEEP AGENT FOR LONG HORIZON TASK\n",
+        "class TaskManager():\n",
+        "  \"\"\"\n",
+        "  Manages task decomposition , tracking and progress monitoring\n",
+        "  \"\"\"\n",
+        "  def create_task(self, title , description , priority , depedencies):\n",
+        "      \"\"\" Register a new task in execution plan\"\"\"\n",
+        "  def update_task_status(self, title , description , priority , depedencies):\n",
+        "      \"\"\"Update task completion status and add execution notes\"\"\"\n",
+        "  def get_pending_task(self, title , description , priority , depedencies):\n",
+        "    \"\"\"Retreive all incomplete tasks ordered by priority\"\"\"\n",
+        "  def get_task_dependencies(self, title , description , priority , depedencies):\n",
+        "    \"\"\"check if task dependencies are satisfied \"\"\"\n",
+        "  def generate_progress_report(self, title , description , priority , depedencies):\n",
+        "    \"\"\"create comprehensive progress summary\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "afQD2HISLNXY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FileSystemManager():\n",
+        "  def write_data(self,path,content,metadata = None):\n",
+        "  def read_data(self,path,content,metadata = None):\n",
+        "  def search_files(self,path,content,metadata = None):\n",
+        "  def archive_context(self,path,content,metadata = None):\n",
+        "  def create_checkpoint(self,path,content,metadata = None):\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "49TCSXzYM18J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sub agent communication protocol\n",
+        "class SubAgentCoordinator:\n",
+        "  \"\"\" Manages sub-agent lifecycle and communication\"\"\"\n",
+        "\n",
+        "  def spawn_agent(self,agent_type,task_specification):\n",
+        "    \"\"\"Instantiate specialist agent for specific task\"\"\"\n",
+        "  def send_task(self,agent_type,task_specification):\n",
+        "    \"\"\"Instantiate specialist agent for specific task\"\"\"\n",
+        "  def receive_result(self,agent_type,task_specification):\n",
+        "    \"\"\"Collect completed work from sub-agent\"\"\"\n",
+        "  def terminate_agent(self,agent_type,task_specification):\n",
+        "    \"\"\"Cleanup sub-agent resources\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "8sl7vczkNTYR"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XQxfTjqbOj25"
       },
       "execution_count": null,
       "outputs": []
